#875132 by watcha: Fixed overflow:hidden on block content breaks contextual links.

--- a/modules/contextual/contextual.css
+++ b/modules/contextual/contextual.css
@@ -9,6 +9,7 @@
 }
 .contextual-links-region-active {
   outline: #999 dashed 1px;
+  overflow: visible !important;
 }
 
 /**
